--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -49,42 +49,11 @@
 <h3>Our Team</h3>
 <p id="id4711"> </p>
 <hr></hr>
-<div>Hier kann ich was schreiben</div>
 <table id="table01" style="width:100%" >
 <center>  <tr>
     <th>Salutation</th>
 	<th>Firstname</th>
     <th>Lastname</th>
-  </tr>
-  <tr>
-    <td id ="psalut">Mr</td>
-    <td id ="pfn">Tony</td>
-    <td id ="pln">Stark</td>
-  </tr>
-  <tr>
-    <td id ="psalut">Mr</td>
-    <td id ="pfn">Peter</td>
-    <td id ="pln">Parker</td>
-  </tr>
-   <tr>
-    <td id ="psalut">Mrs</td>
-    <td id ="pfn">Natasha</td>
-    <td id ="pln">Romanoff</td>
-	 </tr>
- <tr>
-    <td id ="psalut">Mr</td>
-    <td id ="pfn">Bruce</td>
-    <td id ="pln">Banner</td>
-	 </tr>
- <tr>
-    <td id ="psalut">Mr</td>
-    <td id ="pfn">Thor</td>
-    <td id ="pln">Odynsson</td>
-	 </tr>
-	 <tr>
-    <td id ="psalut">Mr</td>
-    <td id ="pfn">Scott</td>
-    <td id ="pln">Lang</td>
   </tr>
 </table>
 
@@ -98,9 +67,9 @@
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname">
-  <label for="mail">E-Mail:</label><br>
-  <input type="text" id="mail" name="mail"><br>
-  <input type="submit" value="Submit">
+  <label for="salut">Salutation:</label><br>
+  <input type="text" id="salut" name="salut"><br>
+  <input id ="submitButton" type="submit" value="Submit">
 
 </form></center>
 
