--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -55,6 +55,8 @@
     <th>Salutation</th>
 	<th>Firstname</th>
     <th>Lastname</th>
+    <th>E-Mail</th>
+    
   </tr>
 </table>
 
@@ -64,16 +66,18 @@
 <h5>Join us!</h5>
 
 <center><form>
+<label for="salutation">Salutation:</label><br>
+    <select id="salutationChoice">
+      <option value="Mr">Mr</option>
+      <option value="Mrs">Mrs</option>
+      <option value="Diverse">Diverse</option>
+    </select>
   <label for="firstname">First name:</label><br>
   <input type="text" id="firstname" name="firstname"><br>
   <label for="lastname">Last name:</label><br>
   <input type="text" id="lastname" name="lastname">
-  <label for="salutation">Salutation:</label><br>
-    <select id="salutationChoice">
-      <option id="salutation" value="Mr">Mr</option>
-      <option id="salutation" value="Mrs">Mrs</option>
-      <option id="salutation" value="Diverse">Diverse</option>
-    </select>
+  <label for="email">E-Mail:</label><br>
+  <input type="email" id="email" name="email">
   <button id ="submitButton" type="submit">Submit</button>
 
 </form></center>
