--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -55,6 +55,7 @@
     <th>Salutation</th>
 	<th>Firstname</th>
     <th>Lastname</th>
+    <th>Address</th>
     <th>E-Mail</th>
     
   </tr>
@@ -70,12 +71,14 @@
     <select id="salutationChoice">
       <option value="Mr">Mr</option>
       <option value="Mrs">Mrs</option>
-      <option value="Diverse">Diverse</option>
+      <option value="Other">Other</option>
     </select>
   <label for="firstname">First name:</label><br>
   <input type="text" id="firstname" name="firstname"><br>
   <label for="lastname">Last name:</label><br>
   <input type="text" id="lastname" name="lastname">
+    <label for="address">Address:</label><br>
+  <input type="text" id="address" name="address"><br>
   <label for="email">E-Mail:</label><br>
   <input type="email" id="email" name="email">
   <button id ="submitButton" type="submit">Submit</button>
